src/components/CreatePartyPage/Form/Web_shop/style.scss
.webshop-container {
  justify-content: center;
  text-align: center;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  padding-top: 15vw;
  @include media-breakpoint-up(xl) {
    padding-top: 5vw;
  }
}

.shop-item-container {
  justify-content: center;
  text-align: center;
  width: 100%;
  margin: 0 0 30px 0;
  display: flex;
  flex-wrap: wrap;
}

.shop-item {
  position: relative;
  width: 320px;
  height: 320px;
  margin: 10px 20px;
  cursor: pointer;
  border-style: solid;
  border-color: #4761b7;
  border-width: 0px;
  transition: border-width 0.2s;
  border-radius: 10px;
  &:hover {
    border-style: solid;
    border-width: 4px;
    border-color: #4762b7;
    transition: border-width 0.2s;
  }
}

/*
.shop-item-x {
  position: relative;
  width: 320px;
  height: 410px;
  margin: 10px 10px;
  cursor: pointer;
  border-style: solid;
  border-color: #4761b7;
  border-width: 0px;
  transition: border-width 0.2s;
  border-radius: 10px;
  background-color: #4761b73d;
  z-index: 10;
  //border-radius: 10px;
  transition: all 150ms ease-in;
  &:hover {
    border-style: solid;
    border-width: 4px;
    border-color: #4762b7;
    transition: border-width 0.2s;
  }
}
*/

.shop-item-border {
  position: relative;
  width: 320px;
  height: 320px;
  margin: 10px 20px;
  cursor: pointer;
  border-radius: 10px;
  border-style: solid;
  border-width: 4px;
  border-color: #4762b7;
  color: black;
}

.shop-item-overlay {
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #4761b73d;
  z-index: 1000;
  //border-radius: 10px;
  transition: all 150ms ease-in;
}

.shop-item-checkmark {
  background-image: url("data:image/svg+xml,%3Csvg width='264' height='264' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23008A64' fill-rule='nonzero'/%3E%3C/svg%3E ");
  background-position-x: 110%;
  background-position-y: 100%;
  z-index: 10 !important;
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  justify-content: center;
  text-align: center;
  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
  z-index: 1000;
}

.shop-img {
  position: relative;
  width: 100%;
  height: 80%;
  box-sizing: border-box;
  z-index: 0 !important;
  border-radius: 10px;
}

.shop-info {
  position: relative;
  width: 100%;
  height: 20%;
  font-family: $small-text;
  font-weight: bold;
  color: $dark;
  background-color: #f2f2f2;
  border-radius: 10px;
}

.placeholder-div {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 100000 !important;
}

.focused {
  color: black;
  transition: all 200ms;
}

.present-info {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  background-color: white;
  z-index: 20;
}

.content-container {
  width: 100%;
  height: 100%;
  background-color: #f2f2f2;
  border-radius: 10px;
}

.more-info-label {
  z-index: 100;
  position: absolute;
  left: 100%;
  img {
    transition: all 0.3s;
    &:hover {
      cursor: pointer;
      transform: scale(1.2) translate(6px);
    }
  }
}

